alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
 	background: url(../img/back.jpg) no-repeat center top;
 	margin-top: -70px;
 	padding-top: 150px;
-  padding-left: 70px;
+  padding-left: 0px;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
